# SemiCraft

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SemiCraft_PRD.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
backend/api/: __init__.py  main.py
backend/semicraft_core/: __init__.py  generate.py  license.py  version.py
backend/semicraft_core/assertions/: __init__.py  generate.py  spec.py
backend/semicraft_core/ir/: __init__.py  build.py  nodes.py  validate.py
backend/semicraft_core/lint/: __init__.py  verilator.py
backend/semicraft_core/modules/: __init__.py  clock_divider.py  contract.py  debouncer.py  edge_detector.py  gray_counter.py  lfsr.py  pwm.py  (+1 more)
backend/tests/: conftest.py
docs/: ASSERTIONS.md  IMPLEMENTATION_PLAN.md  IR_SPEC.md  PLAN-semicraft-phases-2-8.md  PROGRESS.md  RELEASE_CHECKLIST.md  STYLE_GUIDE.md  TB_SPEC.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: CatalogPicker.tsx  CodePreview.tsx  DynamicForm.tsx  ExplanationPanel.tsx  FileTabs.tsx  GeneratorApp.tsx  LintBadge.tsx  SimPanel.tsx  SnippetPicker.tsx  widgets.tsx
frontend/lib/: api.ts  hash.ts  permalink.ts  schema.ts  types.ts  useDebouncedValue.ts
frontend/mocks/: catalog.ts  generate.ts
frontend/tests/: DynamicForm.test.tsx  FileTabs.test.tsx  GeneratorApp.test.tsx  GeneratorAppV2.test.tsx  LintBadge.test.tsx  Simulate.test.tsx  mocks.test.ts  permalink.test.ts  real-422.test.ts  real-schemas.test.ts  schema.test.ts  v2-client.test.ts
scripts/: integration-check.mjs
(+766 files in other folders)
