[project]
name = "semicraft"
version = "0.1.0"
description = "SemiCraft RTL Snippet Generator backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/semicraft_core", "backend/api"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
